[tool.poetry]
name = "pyxmler"
version = "0.1.0"
description = "Converts a Python dictionary into a valid XML string"
authors = ["Ramiro Tician <ramirotician@gmail.com>"]
license = "GPL-2.0"

[tool.poetry.dependencies]
python = "^3.4"

[tool.poetry.dev-dependencies]
pytest = "^4.6.11"
ipdb = "^0.13.3"
pytest-cov = "^2.8.1"
tox = "^3.14.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
