[tool.poetry]
name = "pyxmler"
version = "0.3.0"
description = "Converts a Python dictionary into a valid XML string"
authors = ["Ramiro Tician <ramirotician@gmail.com>"]
license = "GPL-2.0"
readme = "README.md"
repository = "https://github.com/rtician/pyxmler"
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'License :: OSI Approved :: GNU General Public License v2 (GPLv2)',
    'Intended Audience :: Developers',
    'Operating System :: OS Independent',
    'Programming Language :: Python :: 3',
    'Topic :: Software Development :: Libraries'
]


[tool.poetry.dependencies]
python = "^3.4"

[tool.poetry.dev-dependencies]
pytest = "^4.6.11"
ipdb = "^0.13.3"
pytest-cov = "^2.8.1"
tox = "^3.14.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
